--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
  
-    <meta property=’og:title’ content="Kaustubh's Desktop"/>
-    <meta property=’og:image’ content='https://images.prismic.io/kaustubhportfolio/80f39e2d-7e68-43dc-843f-1bfefc47a261_beta.jpg’/>
-    <meta property=’og:description’ content="Kaustubh's Portfolio - Full Stack Developer and Creative Coder."/>
-    <meta property=’og:url’ content='https://kaustubh.app'/>
-    <meta property='og:image:width' content='1620' />
-    <meta property='og:image:height' content='848' />
+    <meta property="og:title" content="Kaustubh's Desktop"/>
+    <meta property="og:image" content="https://images.prismic.io/kaustubhportfolio/80f39e2d-7e68-43dc-843f-1bfefc47a261_beta.jpg"/>
+    <meta property="og:description" content="Kaustubh's Portfolio - Full Stack Developer and Creative Coder."/>
+    <meta property="og:url" content="https://kaustubh.app"/>
+    <meta property="og:image:width" content="1620" />
+    <meta property="og:image:height" content="848" />
     <!-- TYPE BELOW IS PROBABLY: 'website' or 'article' or look on https://ogp.me/#types -->
-    <meta property="og:type" content='website'/>
+    <meta property="og:type" content="website"/>
 
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title><%= htmlWebpackPlugin.options.title %></title>
