--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
  
     <meta property="og:title" content="Kaustubh's Desktop"/>
-    <meta property="og:image" content="https://images.prismic.io/kaustubhportfolio/80f39e2d-7e68-43dc-843f-1bfefc47a261_beta.jpg"/>
+    <meta property="og:image" content="https://raw.githubusercontent.com/itskaustubh/itskaustubh.github.io/master/src/assets/images/kaustubh191.jpg"/>
     <meta property="og:description" content="Kaustubh's Portfolio - Full Stack Developer and Creative Coder."/>
     <meta property="og:url" content="https://kaustubh.app"/>
     <meta property="og:image:width" content="1620" />
