style: body background dark

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body>
+  <body style="background:#1e1e1e">
     <noscript>
       <strong
         >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript
